cmake_minimum_required(VERSION 3.10)
project(NVParallelQQS VERSION 1.0) 
set(CMAKE_CXX_STANDARD 17) 
set(CMAKE_CXX_STANDARD_REQUIRED True) 
file(GLOB_RECURSE SRC_DIR_LIST "src/*.cpp")
set (VER 1.0.2-2)
IF (WIN32)
	set (POSIX 0)
ELSEIF (APPLE)
	set (POSIX 1)
ELSEIF (UNIX)
	set (POSIX 1)
ENDIF ()
file(GLOB_RECURSE NVINC "NVirsual/include/*")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/obj)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/obj)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/obj)
option(NVPARALLELQQS_LINK_SHARED "Link NVParallelQQS to NVirsual SHARED library" OFF)
add_executable(NVParallelQQS "${SRC_DIR_LIST}")
	target_include_directories(NVParallelQQS PUBLIC "include" "${PROJECT_BINARY_DIR}/Config" "NVirsual/include")
if(NVPARALLELQQS_LINK_SHARED)
	message("Select Option: NVPARALLELQQS_LINK_SHARED")
	target_link_libraries(NVParallelQQS NVirsual)
else()
    target_link_libraries(NVParallelQQS NVirsual_static)
endif()
MESSAGE(STATUS "System: ${CMAKE_HOST_SYSTEM_NAME} ${CMAKE_HOST_SYSTEM_PROCESSOR}")
MESSAGE("-- Compiler: ${CMAKE_CXX_COMPILER_ID}")
	add_subdirectory("NVirsual")  
	configure_file(include/Config.h.in Config/Config.h)

install(TARGETS "NVParallelQQS" "NVirsual" "NVirsual_static"
        LIBRARY DESTINATION lib  
        ARCHIVE DESTINATION lib 
        RUNTIME DESTINATION bin  
        )
install(FILES ${NVINC} DESTINATION  ${CMAKE_INSTALL_PREFIX}/include/NVirsual)